# lolelffs

./: .gitignore  ENCRYPTION.md  Makefile  README.md  bitmap.h  dir.c  elf.h  encrypt.c  encrypt.h  extent.c  file.c  fs.c  fsck.lolelffs.c  inode.c  lolelffs.h  mkfs.c  super.c  unlock_lolelffs.c  xattr.c
.github/: kernel.config
.github/workflows/: build-kernel.yml  ci.yml
examples/: Makefile  QUICK_START.md  README.md  test-all-no-root.sh
examples/01-shell-scripts/: README.md  backup-script.sh  basic-mount.sh  create-and-populate.sh  dual-purpose-binary.sh  encrypted-workflow.sh  fuse-mount.sh
examples/02-elf-embedding/hello-world/: Makefile  README.md  build.sh  hello  hello-with-fs  hello.c
examples/03-programmatic/c-examples/: Makefile  read-superblock  read-superblock.c
examples/04-linker-scripts/aligned-section/: Makefile  aligned.ld  build.sh  example  example.c
examples/04-linker-scripts/basic-section/: Makefile  (+6 more)
lolelffs-tools/: Cargo.toml
lolelffs-tools/lolelffs-fuse/: Cargo.toml
lolelffs-tools/lolelffs-fuse/src/: main.rs
lolelffs-tools/src/: bitmap.rs  compress.rs  dir.rs  encrypt.rs  file.rs  fs.rs  lib.rs  main.rs  types.rs  xattr.rs
src/: bitmap.h  compress.c  compress.h  encrypt.c  extent.c  file.c  fsck.lolelffs.c  inode.c  lolelffs.h  mkfs.c  super.c  xattr.c
test/: test.sh  test_benchmark.c  test_mkfs.c  test_stress.c  test_unit.c
tests/: test.sh  test_benchmark.c  test_elf_mount.sh  test_encryption.sh  test_full_system.sh  test_fuse.sh  test_kernel_encryption.sh  test_kernel_unlock.sh  test_mkfs.c  test_stress.c  test_unit.c
