[workspace]
members = [".", "lolelffs-fuse"]

[package]
name = "lolelffs-tools"
version = "0.1.0"
edition = "2021"
description = "CLI tools for interacting with lolelffs filesystems"
authors = ["lolelffs contributors"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
byteorder = "1"
chrono = "0.4"
thiserror = "1"
lz4 = "1.24"
flate2 = "1.0"
zstd = "0.13"

# Encryption
aes = "0.8"
xts-mode = "0.5"
chacha20poly1305 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"

[[bin]]
name = "lolelffs"
path = "src/main.rs"
